@@ -1,0 +1,5 @@
+<?php
+$def = new ezcPersistentObjectDefinition();
+$def->class = 'MyClass';
+return $def;
+?>
